# compliance-health

./: README.md
fastapi/: pyproject.toml
fastapi/data/apl/: APL23-027.pdf.json  APL23-027.pdf_2024-05-06-07-19-17_1.json  APL23-027.pdf_2024-05-06-07-19-17_2.json  APL23-027.pdf_2024-05-06-07-19-17_3.json  APL23-027.pdf_2024-05-13-02-03-37_1.json  APL23-027.pdf_2024-05-13-02-03-37_2.json  APL23-027.pdf_2024-05-13-02-03-37_3.json  APL23-027.pdf_2024-05-13-02-03-37_4.json  APL23-027.pdf_2024-05-13-02-03-37_5.json  APL23-027.pdf_2024-05-13-02-03-37_6.json  APL23-030.pdf.json  APL23-030.pdf_2024-05-07-06-20-26_1.json  APL23-030.pdf_2024-05-07-06-20-26_2.json  APL23-030.pdf_2024-05-07-06-20-26_3.json  APL23-032.pdf.json  APL23-032.pdf_2024-05-07-06-24-18_1.json  APL23-032.pdf_2024-05-07-06-24-18_2.json  APL23-032.pdf_2024-05-07-06-24-18_3.json  APL23-033.pdf.json  APL23-033.pdf_2024-05-07-06-33-12_1.json  APL23-033.pdf_2024-05-07-06-33-12_2.json  APL23-033.pdf_2024-05-07-06-33-12_3.json  APL23-034.pdf.json  APL23-034.pdf_2024-05-07-06-35-58_1.json  APL23-034.pdf_2024-05-07-06-35-58_2.json  APL23-034.pdf_2024-05-07-06-35-58_3.json  APL23-035.pdf.json  APL23-035.pdf_2024-05-07-06-43-54_1.json  APL23-035.pdf_2024-05-07-06-43-54_2.json  APL23-035.pdf_2024-05-07-06-43-54_3.json  APL24-001.pdf.json  APL24-001.pdf_2024-05-07-06-53-40_1.json  APL24-001.pdf_2024-05-07-06-53-40_2.json  APL24-001.pdf_2024-05-07-06-53-40_3.json  APL24-002.pdf.json  (+11 more)
fastapi/src/: app.py  ingest.json  ingest0.json  ingest0.py  ingest1.json  ingest1.py  ingest2.json  ingest2.py  ingest_.json  parse.py
(+19 files in other folders)
